RESOLVED FIXED145686
Typing is slow in Gmail on iPads
https://bugs.webkit.org/show_bug.cgi?id=145686
Summary Typing is slow in Gmail on iPads
Ryosuke Niwa
Reported 2015-06-04 22:49:26 PDT
Visit mail.google.com with ToT WebKit on iPad 3. Typing is sluggish. <rdar://problem/21148125>
Attachments
Fixes the bug (4.52 KB, patch)
2015-06-04 23:06 PDT, Ryosuke Niwa
no flags
Removed irrelevant changes to perf.webkit.org (3.80 KB, patch)
2015-06-04 23:07 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2015-06-04 23:06:41 PDT
Created attachment 254343 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2015-06-04 23:07:48 PDT
Created attachment 254344 [details] Removed irrelevant changes to perf.webkit.org
Enrica Casucci
Comment 3 2015-06-06 00:13:14 PDT
Comment on attachment 254344 [details] Removed irrelevant changes to perf.webkit.org Looks great!
Ryosuke Niwa
Comment 4 2015-06-06 00:33:08 PDT
(In reply to comment #3) > Comment on attachment 254344 [details] > Removed irrelevant changes to perf.webkit.org > > Looks great! Thanks for the review!
WebKit Commit Bot
Comment 5 2015-06-06 01:21:48 PDT
Comment on attachment 254344 [details] Removed irrelevant changes to perf.webkit.org Clearing flags on attachment: 254344 Committed r185287: <http://trac.webkit.org/changeset/185287>
WebKit Commit Bot
Comment 6 2015-06-06 01:21:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.